--- a/.eslintrc
+++ b/.eslintrc
@@ -66,7 +66,7 @@
         "allowTemplateLiterals": true
       }
     ],
-    "indent": ["error", 2, {"SwitchCase": 1}],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "prettier/prettier": [
       "error",
       {
@@ -81,7 +81,8 @@
       {
         "aspects": ["invalidHref"]
       }
-    ]
+    ],
+    "import-order-alphabetical/order": "error"
   },
-  "plugins": ["prettier"]
+  "plugins": ["prettier", "eslint-plugin-import-order-alphabetical"]
 }
